# timble

./: Cargo.toml  README.md  dfx.json  generate.sh
src/timble_backend/: Cargo.toml  timble_backend.did
src/timble_backend/src/: lib.rs  tp.rs
src/timble_frontend/: Cargo.toml  README.md  package-lock.json
src/timble_frontend/src/: app.rs  main.rs
src/timble_frontend/src/app/components/: all_images.rs  crisp.rs  home_page.rs  mod.rs  navbar.rs
src/timble_frontend/style/: tailwind.css
